# Beginner_Tutorial

./: README.md
basic_connect/: CMakeLists.txt  README.md  package.xml
basic_connect/scripts/: GPIO_test.py  I2C_test.py  camera_test.py  control_test.py
camera_demo/: CMakeLists.txt  package.xml
camera_demo/scripts/: control_motor_color.py  demo.py
simple_robot/All/: PlayGame.py
simple_robot/Game/: README.md
vision_demo/: CMakeLists.txt  README.md  package.xml
vision_demo/scripts/: camera.py
voice_demo/: CMakeLists.txt  README.md  package.xml
voice_demo/scripts/: voice_output.py
